--- a/flask/app/static/css/main.css
+++ b/flask/app/static/css/main.css
@@ -378,6 +378,19 @@
 #panel-group3{
     display: inline-block;
 }
+
+.retorno th{
+    border: 1px solid #dddddd;
+    background-color: #3F51B5;
+    text-align: center;
+    padding: 8px;
+    color: white;
+}
+.retorno td {
+    border: 1px solid #dddddd;
+    padding: 8px;
+    text-align: left;
+}
 /* ----------------Redefinição do checkbox----------------------------------------------------------- */
 .calculos {
     display: block;
