--- a/flask/app/templates/painel.html
+++ b/flask/app/templates/painel.html
@@ -10,27 +10,44 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/painel.css') }}">
     </head>
     <body>
-       <nav class="navbar navbar-default sidebar" role="navigation">
-    <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-sidebar-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>      
-    </div>
-    <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-          <li><a href="home.html">CPA <img src="../static/imagens/logo.png" style="width: 15%; float: right;"></a></li>
-        <li class="active"><a href="painel.html">Home<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span></a></li>
-        <li><a href="#">Usuarios <span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span></a>
-        </li>          
-        <li ><a href="#">Banco de Dados<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-th-list"></span></a></li>        
-        <li ><a href="home.html">Sair<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-log-out"></span></a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-    </body>
-</html>    
+        <nav class="navbar navbar-default sidebar" role="navigation">
+            <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-sidebar-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>      
+            </div>
+            <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                  <li><a href="home.html">CPA <img src="../static/imagens/logo.png" style="width: 15%; float: right;"></a></li>
+                <li class="active" onclick="goto('home')"><a>Home<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span></a></li>
+                <li onclick="goto('user')"><a>Usuarios <span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span></a>
+                </li>          
+                <li onclick="goto('bd')"><a>Banco de Dados<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-th-list"></span></a></li>        
+                <li ><a href="home.html">Sair<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-log-out"></span></a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+        <div class="home">
+            <h1>Bem Vindo ao Painel de Configurações José Cezar!!</h1>
+            <hr>
+            <h3>Não esqueça de atualizar os dados, na seção de Banco de Dados!!</h3>
+             
+        </div>
+        <div class="users">
+        
+        </div>
+        <div class="bd">
+        
+        </div>
+</body>
+</html>
+<script>
+    function goto(str){
+        
+    }
+</script>
