--- a/flask/app/templates/analytics.html
+++ b/flask/app/templates/analytics.html
@@ -87,6 +87,7 @@ function mudar() {
                                   <label class="titleForm" id="tamJanela" style="display: none"> Tamanho Da Janela:
                                     <input type="number" min="1" max="30" style="width: 50%;">
                                   </label>
+                                  
                                   <label class="titleForm calculos">Ln
                                     <input type="checkbox" id="ln">
                                     <span class="checkmark"></span>
@@ -214,8 +215,8 @@ function mudar() {
             <h3>Média Mensal</h3>
             <table class="retorno">
                 <tr>
-                    <th>Mes</th>
-                    <th>Preço do Ajusto Atual </th>
+                    <th>Mês</th>
+                    <th>Preço do Ajuste Atual </th>
                     <th>Variação</th>
                     <th>Número de Contratos em Aberto</th>
                     <th>Volume</th>
