--- a/flask/app/templates/analytics.html
+++ b/flask/app/templates/analytics.html
@@ -69,7 +69,7 @@ function mudar() {
                                     <span class="checkmark"></span>
                                   </label>
                                   <label class="titleForm calculos">Média Quinzenal
-                                    <input type="checkbox" id="medQuinze">
+                                    <input type="checkbox" name="medQuinze" id="medQuinze">
                                     <span class="checkmark"></span>
                                   </label>
                                   <label class="titleForm calculos">Média Mensal
@@ -157,6 +157,7 @@ function mudar() {
             <h3>Média Diária</h3>
             <table class="retorno">
                 <tr>
+                    <th>Data</th>
                     <th>Preço do Ajuste Atual </th>
                     <th>Variação</th>
                     <th>Número de Contratos em Aberto</th>
@@ -176,11 +177,11 @@ function mudar() {
             <table class="retorno">
                 <tr>
                   <!--   <th>Data</th> -->
+                    <th>Semana</th>
                     <th>Preço de Ajuste Atual </th>
                     <th>Variação</th>
                     <th>Número de Contratos em Aberto</th>
                     <th>Volume</th>
-                    <th>Preço de Abertura</th>
                     <th>Preço de Abertura</th>
                     <th>Preço Mínimo</th>
                     <th>Preço Máximo</th>
@@ -190,22 +191,21 @@ function mudar() {
                 </tbody>
             </table>
         </div>
-        <div class="resultado" id="tableMedQuize" style="display: none">
+        <div class="resultado" id="tableMedQuinze" style="display: none">
              <hr>
             <h3>Média Quinzenal</h3>
             <table class="retorno">
                 <tr>
                     <th>Data</th>
-                    <th>Preço do Ajusto Atual </th>
+                    <th>Preço do Ajuste Atual </th>
                     <th>Variação</th>
                     <th>Número de Contratos em Aberto</th>
                     <th>Volume</th>
                     <th>Preço de Abertura</th>
-                    <th>Preço de Abertura</th>
                     <th>Preço Mínimo</th>
                     <th>Preço Máximo</th>
                 </tr>
-                <tbody>
+                <tbody id="bodyQuinzenal">
                   
                 </tbody>
             </table>
@@ -234,6 +234,7 @@ function mudar() {
             <h3>Desvio Padrão</h3>
             <table class="retorno">
                 <tr>
+                  <th>Data</th>
                   <th>Preço do Ajuste Atual </th>
                   <th>Variação</th>
                   <th>Número de Contratos em Aberto</th>
