adicionado os botões de gráficos na página de análises

--- a/flask/app/templates/analytics.html
+++ b/flask/app/templates/analytics.html
@@ -112,6 +112,10 @@ function mudar() {
                                     <input type="checkbox" id="ln">
                                     <span class="checkmark"></span>
                                   </label>
+                                  <label class="titleForm calculos">Rolagem do Vencimentos em Aberto
+                                    <input type="checkbox" id="rolagem">
+                                    <span class="checkmark"></span>
+                                  </label>
                               </li>
                             </ul>
                             <div class="panel-footer"></div>
@@ -280,6 +284,9 @@ function mudar() {
                   
                 </tbody>
             </table>
+              <div id="graphDown" style="float: right">
+                  <button type="button" class="myBtn" data-toggle="modal" data-target="#opGrafico" style="background-color: dodgerblue"> <i class='fas fa-chart-line'></i> Gráficos</button>
+            </div>
         </div>
          <div class="resultado" id="tableln" style="display: none">
              <hr>
@@ -295,6 +302,9 @@ function mudar() {
                   
                 </tbody>
             </table>
+             <div id="graphDown" style="float: right">
+                  <button type="button" class="myBtn" data-toggle="modal" data-target="#opGrafico" style="background-color: dodgerblue"> <i class='fas fa-chart-line'></i> Gráficos</button>
+            </div>
         </div>
     </div>
 
