adicionado os botões de gráficos na página de análises

--- a/flask/app/static/css/main.css
+++ b/flask/app/static/css/main.css
@@ -389,7 +389,7 @@
 .retorno td {
     border: 1px solid #dddddd;
     padding: 8px;
-    text-align: left;
+    text-align: right;
 }
 
 /* ----------------Redefinição do checkbox----------------------------------------------------------- */
