filtro semanal corrigido

--- a/flask/app/templates/ajusteTable.html
+++ b/flask/app/templates/ajusteTable.html
@@ -84,9 +84,9 @@
                 <option value = "M">Mensal</option>
             </select>
              <select name = "diaSemana" class="formSelec" id="semanal" style="display: none">
-                <option value = "6">Domingo</option>
+                <option value = "0">Segunda</option>
                 <option value = "2">Quarta</option>
-                <option value = "5">Sábado</option>
+                <option value = "4">Sexta</option>
             </select>
             <select name = "diaMes" class="formSelec" id="mensal" style="display: none">
                 <option value = "P">Primeiro Dia</option>
