mensagem de erro adicionada

--- a/flask/app/templates/analytics.html
+++ b/flask/app/templates/analytics.html
@@ -366,21 +366,21 @@ function mudar() {
     function mudarSelect(){
         var commodite = document.getElementById("selectComood");
         if(commodite.value == 'B'){
-               var newOptions = {"Todos": "all",
+               var newOptions = {
                   "Janeiro": "F",
                   "Fevereiro": "G", "Março": "H", "Abril": "J", "Maio":"K" ,"Junho":"M", "Julho":"N","Agosto":"Q", "Setembro": "U", "Outubro": "V", "Novembro": "X", "Dezembro":"Z"
                 };
         }else if(commodite.value == 'C'){
-                 var newOptions = {"Todos": "all",
+                 var newOptions = {
                    "Março": "H", "Maio":"K", "Julho":"N", "Setembro": "U", "Dezembro":"Z"
                 };
         }else if(commodite.value == 'M'){
-                var newOptions = {"Todos": "all",
+                var newOptions = {
                   "Janeiro": "F",
                    "Março": "H", "Maio":"K", "Julho":"N","Agosto":"Q", "Setembro": "U", "Novembro": "X",
                 };
         }else{
-            var newOptions = {"Todos": "all",
+            var newOptions = {
                   "Março": "H", "Abril": "J", "Maio":"K" ,"Junho":"M", "Julho":"N","Agosto":"Q", "Setembro": "U", "Novembro": "X",
                 };
         }
