estrutura das páginas de rolagem

--- a/flask/app/templates/analytics.html
+++ b/flask/app/templates/analytics.html
@@ -112,7 +112,7 @@ function mudar() {
                                     <span class="checkmark"></span>
                                   </label>
                                   <label class="titleForm calculos">Rolagem do Vencimentos em Aberto
-                                    <input type="checkbox" id="rolagem">
+                                    <input type="checkbox" id="rolagem" name="rolagem">
                                     <span class="checkmark"></span>
                                   </label>
                               </li>
